# tpDcc-dccs-maya

./: .buildinfo  .travis.yml  README.md  README.rst  genindex.html  objects.inv  py-modindex.html  requirements.txt  searchindex.js  setup.cfg  tpDcc.dccs.html  tpDcc.dccs.maya.api.attributetypes.html  tpDcc.dccs.maya.api.commands.html  tpDcc.dccs.maya.api.commands.setskinweights.html  tpDcc.dccs.maya.api.curves.html  tpDcc.dccs.maya.api.exceptions.html  tpDcc.dccs.maya.api.html  tpDcc.dccs.maya.api.mathlib.html  tpDcc.dccs.maya.api.mesh.html  tpDcc.dccs.maya.api.node.html  tpDcc.dccs.maya.api.plugs.html  tpDcc.dccs.maya.api.skin.html  tpDcc.dccs.maya.core.animation.html  tpDcc.dccs.maya.core.api.html  tpDcc.dccs.maya.core.attribute.html  tpDcc.dccs.maya.core.blendshape.html  tpDcc.dccs.maya.core.callback.html  tpDcc.dccs.maya.core.camera.html  tpDcc.dccs.maya.core.cluster.html  tpDcc.dccs.maya.core.color.html  tpDcc.dccs.maya.core.colormanagement.html  tpDcc.dccs.maya.core.command.html  tpDcc.dccs.maya.core.common.html  tpDcc.dccs.maya.core.component.html  tpDcc.dccs.maya.core.constants.html  tpDcc.dccs.maya.core.constraint.html  tpDcc.dccs.maya.core.contexts.html  tpDcc.dccs.maya.core.curve.html  tpDcc.dccs.maya.core.dcc.html  tpDcc.dccs.maya.core.decorators.html  (+78 more)
_sources/: tpDcc.dccs.maya.api.attributetypes.rst.txt  tpDcc.dccs.maya.api.commands.rst.txt  tpDcc.dccs.maya.api.commands.setskinweights.rst.txt  tpDcc.dccs.maya.api.curves.rst.txt  tpDcc.dccs.maya.api.exceptions.rst.txt  tpDcc.dccs.maya.api.mathlib.rst.txt  tpDcc.dccs.maya.api.mesh.rst.txt  (+101 more)
(+162 files in other folders)
