[metadata]
name = tpDcc-dccs-maya
description = Maya implementation for tpDcc. Utils functions to work with Maya Python APIs.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-dccs-maya

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    tpDcc-core==0.0.16
    tpDcc-libs-python==0.0.9
    tpDcc-libs-qt==0.0.16

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/dccs/maya/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =